@startuml

skinparam monochrome true
skinparam StateFontName Helvetica
skinparam defaultFontName Monospaced
skinparam defaultFontStyle Bold
skinparam state {
    FontColor Black
    FontStyle Bold
}


[*] --> LOCKED
LOCKED --> UNLOCKED : UNLOCK
UNLOCKED ---> LOCKED : LOCK
DOUBLE_LOCKED ---> LOCKED : UNLOCK
LOCKED --> DOUBLE_LOCKED : LOCK

@enduml
